[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl_games"
version = "0.1.0"
description = "RL Games: a collection of reinforcement learning games."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "gymnasium",
    "numpy",
    "torch",
    "optuna",
    "matplotlib",
]

[project.scripts]
rlgames = "rl_games.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_games"]
